classDiagram
    class Team {
        uint id
        std::string name
        std::vector~std::string~ players 
    }
    
    class Field {
        uuids::uuid id
        std::string name
        std::string location
        
    }
    
    class Tournament {
        <<interface>>
        bool teamsAsRefferees

        std::unordered_map~uuid, team*~ teams
        std::unordered_map~uuid, field*~ fields
        std::vector~std::string~ refferees
        loadTournamentFromJSON()
        saveTournamentToJSON()
        addTeam(Team)
        deleteTeam(Team)
        createTournament()
        deleteTournament()
    }
    
    class Match {
        <<interface>>
        uuids::uuid id
        uuids::uuid idTeam1
        uuids::uuid idTeam2
        uuids::uuid idField
        int[2] score
        uint startTime
        uint maxGameTime 
        Match()
        getWinner() uuids::uuid
        getLoser() uuids::uuid
        getters_setters()
    }

    class KoMatch{
        uuid nextMatch

        getters_setters()
    }
    class GroupMatch{
        uuid nextMatch1
        uuid nextMatch2

        getters_setters()
    }
    
    class KoTournament {
        std::unordered_map~uuid, koMatch*~ matches
    }
     class GroupTournament {
        
        uint anzGroups
        uint groupSize
        std::vector~std::unordered_map<uuids::uuid groupMatch*>> groups
        getGroupBest(int rangePlacment)


    }

    Tournament <|..KoTournament : implenents
    Tournament <|..GroupTournament : implenents
    Match <|..KoMatch : implenents
    Match <|..GroupMatch : implenents
    Tournament "1" *-- "*" Match
    Tournament "1" *-- "*" Field
    Match "2" --o "" Team